# Study-of-ARIMA-GARCH-Features-for-Random-Forest

./: .coverage  .gitignore  AGENTS.md  README.md  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.py  run_quality_tests.sh
documentation/: LLM_assistance_methodologie.txt  METHODOLOGIE_PRINCIPALE.md  methodologie.txt
results/data/: fetch_report.json  stationarity_report.json
src/: config_logging.py  constants.py  label_primaire.py  main_global.py  path.py  test_e2e.py
src/arima/: METHODOLOGIE_ARIMA.txt  __init__.py
src/benchmark/: bench_volatility.py  main_vol_backtest.py
src/data_cleaning/: __init__.py  analysis.py  data_cleaning.py  filtering.py  integrity.py  main.py  methodologie_data_cleaning.txt  metrics.py  validation.py
src/data_conversion/: __init__.py  data_conversion.py  main.py  methodologie_data_conversion.txt  utils.py
src/data_fetching/: __init__.py  data_fetching.py  download.py  main.py  methodologie_data_fetching.txt  processing.py  reporting.py  wikipedia.py
src/data_preparation/: __init__.py  computations.py  data_preparation.py  main.py  methodologie_data_preparation.txt  ticker_preparation.py  timeseriessplit.py  utils.py
src/data_visualisation/: __init__.py  data_visualisation.py  methodologie_data_visualisation.txt
src/garch/: METHODOLOGIE_GARCH.txt  __init__.py
src/label_meta/: __init__.py  meta_model.py
src/lightgbm/: methodologie_lightgbm.txt  model_utils.py  shared_utils.py
src/sp500_forecasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: __init__.py  datetime_utils.py  financial.py  io.py  logging_utils.py  methodologie_utils.txt  metrics.py  statsmodels_utils.py  temporal.py  transforms.py  validation.py
src/visualization/: __init__.py  methodologie_visualization.txt  plotting_utils.py
tests/: conftest.py  test_global.py  test_label_primaire.py  test_utils_validation.py
tests/benchmark/: test_bench_volatility.py  test_model_comparison.py
tests/data_cleaning/: test_analysis.py  test_filtering.py  test_helpers.py  test_integrity.py  test_metrics.py  test_validation.py
tests/data_conversion/: conftest.py  test_data_conversion.py
tests/data_fetching/: conftest.py  test_download.py  test_integration.py  test_processing.py  test_reporting.py  test_wikipedia.py
tests/data_preparation/: test_critical_leakage_detection.py  test_data_leakage_validation.py  test_ticker_preparation.py  test_ticker_preparation_pipeline.py  test_weighted_returns.py
tests/garch/: test_anti_leak_forecast.py  test_antileakage.py  test_realized_volatility.py
tests/utils/: test_datetime_utils.py  test_statsmodels_utils.py
(+257 files in other folders)
