[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sp500-forecasting"
version = "0.0.1"
description = "Projet étudiant: Forecasting S&P 500 - Impact des Features ARIMA-GARCH sur LightGBM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Steven"},
]
maintainers = [
    {name = "Steven"},
]
keywords = ["finance", "forecasting", "machine-learning", "time-series", "sp500"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas==2.3.3",
    "fastparquet==2024.11.0",
    "skew==0.19.0",
    "stats==0.1.2a0",
    "yfinance>=0.2.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "optuna>=3.0.0",
    "optuna-integration[lightgbm]>=0.5.0",
    "shap>=0.49.1",
    "lightgbm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.11.2",
    "pytest==8.4.2",
    "ruff==0.6.4",
    "black[jupyter]==24.8.0",
    "isort==5.13.2",
    "pytest-cov==5.0.0",
    "coverage==7.6.1",
    "pre-commit==3.8.0",
    "bandit==1.7.9",
    "radon==6.0.1",
    "xenon==0.9.1",
]

# [project.urls]
# Homepage = "https://github.com/username/sp500-forecasting"
# Repository = "https://github.com/username/sp500-forecasting"
# Issues = "https://github.com/username/sp500-forecasting/issues"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
  "^notebook/",
  "^SP_Forecasting/",
  "src/.*/test_.*\\.py$",
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
extend-select = ["E", "F", "B"]
ignore = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


